--- a/base/package.json
+++ b/base/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
-    "eslint": "2.2.0"
+    "babel-eslint": "5.0.0",
+    "eslint": "2.2.0",
+    "eslint-plugin-babel": "3.1.0",
+    "eslint-plugin-import": "1.0.3"
   }
 }
