--- a/babel/.eslintrc.yaml
+++ b/babel/.eslintrc.yaml
@@ -57,7 +57,7 @@ rules:
   # http://eslint.org/docs/rules/#variables
   no-label-var: 2
   no-shadow-restricted-names: 2
-  no-shadow: [2, {builtinGlobals: true}]
+  no-shadow: 2
   no-undef-init: 2
   no-unused-vars: [2, {args: 'all', varsIgnorePattern: '^_', argsIgnorePattern: '^_'}]
 
